HS-2816 drop-down overflow fixed

--- a/css/src/components/_drop-down.sass
+++ b/css/src/components/_drop-down.sass
@@ -9,7 +9,8 @@
     @extend .unstyled
 
     max-height: 80vh
-    overflow: scroll
+    overflow-y: scroll
+    overflow-x: hidden
     display: none
     padding: rem(4px) 0 !important
     position: absolute
